[tool.poetry]
name = "fastapi-complex-condition"
version = "0.1.0"
description = ""
authors = ["Kazuki Hashimoto <eru.tndl@gmail.com>"]
license = "Beerware"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
